--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,100 @@
+*, *:before, *:after {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body{
     background-color: #F3F2EF;
 }
 .card{
-    border:1px solid gray;
+    border:1px solid #ffffff;
     border-radius:10px;
     width:240px;
     height: 300px;
     background-color: #ffffff;
+    
+}
+.img-container{
+    background: #ffffff;
+    border:10px solid #9DB3C8;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    position:relative;
+    display:block;
+    top:25px;
+    left: 15px;
+}
+
+.img-hastag{
+    background: #ccd7e2;
+    border:3px solid #ffffff;
+    border-radius: 50%;
+    width: 35px;
+    height: 35px;
+    position:relative;
+    display:block;
+    /* left:px */
+    top:-2px;
+    left:-2px
+}
+
+.line-h{
+    position: relative;
+    display: block;
+    background: black;
+    width: 23px;
+    height:3px;
+    left:3px;
+    top:-4px;
+}
+
+.line-h:before, .line-h:after{
+    background: black;
+    content: '';
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute
 
 }
+.line-h:after{
+    top:-8px;
+}
+
+
+.line-v{
+    position: relative;
+    display: block;
+    background: black;
+    width: 3px;
+    height:22px;
+    left:9px;
+    top:4px;
+    transform: rotate(10deg)
+
+} 
+
+.line-v:before, .line-v:after{
+    background: black;
+    content: '';
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;   
+   
+}
+
+.line-v:after{
+    top:-1px;
+    left:8px;
+} 
+
+
 #card-title{
-    margin-left: 15px ;
+    margin-left: 15px;
+    margin-top: 30px
 }
 
 .card-footer{
@@ -23,10 +107,11 @@ body{
 }
 #card-line{
     margin-left: 15px;
-    padding: 5px;
+    /* padding: 5px; */
     width: 50px;
     border-top: 1px solid grey
 }
+
 button{
     height:40px;
     align-self: center;
@@ -37,3 +122,4 @@ button{
     border: none;
     border-top: 1px solid grey;
 }
+
